<resources>
    <string name="app_name">Academia by AK</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="academia">Academia</string>
    <string name="attendance">Attendance</string>
    <string name="academic_planner">Academic Planner</string>
    <string name="time_table">Time table</string>
    <string name="courses">Courses</string>
</resources>
