<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ankit.com.acadmiabyak.MainPage">


    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/academia"
        android:id="@+id/t1"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/b1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/t1"
        android:ems="10"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:id="@+id/b2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/attendance"
        android:ems="10"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b2"
        android:id="@+id/b3"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/academic_planner"
        android:ems="10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b3"
        android:id="@+id/b4"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/time_table"
        android:ems="10"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b4"
        android:id="@+id/b5"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/courses"
        android:ems="10"/>
    <WebView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/logout">

    </WebView>

</RelativeLayout>
